# ResoddedFramework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: build.yml  dependencies.yml
assets/framework/compiled/particles/: Award.xml.compiled  AwardPickupArrow.xml.compiled  BlastMark.xml.compiled  BossExplosion.xml.compiled  BossIceBallTrail.xml.compiled  ButterSplat.xml.compiled  CabbageSplat.xml.compiled  CatapultExplosion.xml.compiled  CoinPickupArrow.xml.compiled  Credits_RaysWipe.xml.compiled  Credits_Strobe.xml.compiled  Credits_ZombieHeadWipe.xml.compiled  Credits_fog.xml.compiled  Daisy.xml.compiled  DancerRise.xml.compiled  DiggerRise.xml.compiled  DiggerTunnel.xml.compiled  Doom.xml.compiled  Dust_Foot.xml.compiled  Dust_Squash.xml.compiled  FireballDeath.xml.compiled  Fireball_Trail.xml.compiled  FumeCloud.xml.compiled  GloomCloud.xml.compiled  GraveBuster.xml.compiled  GraveBusterDie.xml.compiled  GraveStoneRise.xml.compiled  IceSparkle.xml.compiled  IceTrail.trail.compiled  IceTrap.xml.compiled  IceTrapRelease.xml.compiled  IceTrapZombie.xml.compiled  IceballDeath.xml.compiled  Iceball_Trail.xml.compiled  ImitaterMorph.xml.compiled  JackExplode.xml.compiled  LanternShine.xml.compiled  MelonImpact.xml.compiled  MindControl.xml.compiled  MowerCloud.xml.compiled  (+67 more)
assets/framework/compiled/reanim/: Blover.reanim.compiled  Cabbagepult.reanim.compiled  Cactus.reanim.compiled  Caltrop.reanim.compiled  Cattail.reanim.compiled  CherryBomb.reanim.compiled  Chomper.reanim.compiled  CobCannon.reanim.compiled  Coffeebean.reanim.compiled  Coin_gold.reanim.compiled  Coin_silver.reanim.compiled  Cornpult.reanim.compiled  CrazyDave.reanim.compiled  Credits_Anyhour.reanim.compiled  Credits_BigBrain.reanim.compiled  Credits_Bossdance.reanim.compiled  Credits_CrazyDave.reanim.compiled  Credits_DiscoLights.reanim.compiled  Credits_Flower_petals.reanim.compiled  Credits_Football.reanim.compiled  Credits_Infantry.reanim.compiled  Credits_Jackbox.reanim.compiled  Credits_Main.reanim.compiled  Credits_Main2.reanim.compiled  Credits_Main3.reanim.compiled  Credits_SolarPower.reanim.compiled  Credits_Throat.reanim.compiled  Credits_Tombstones.reanim.compiled  Credits_WeAreTheUndead.reanim.compiled  Credits_ZombieArmy1.reanim.compiled  Credits_ZombieArmy2.reanim.compiled  Credits_stage.reanim.compiled  Diamond.reanim.compiled  Digger_rising_dirt.reanim.compiled  DoomShroom.reanim.compiled  FinalWave.reanim.compiled  FirePea.reanim.compiled  Fumeshroom.reanim.compiled  Garlic.reanim.compiled  GatlingPea.reanim.compiled  (+106 more)
assets/framework/properties/: FrameworkStrings.txt  framework_resources.xml
assets/properties/: FrameworkStrings.txt
cmake/: BuildInfo.cmake  CheckGit.cmake  UserConfig.cmake  sync_assets.cmake
ios/: Info.plist.in  LaunchScreen.storyboard
src/: ConstEnums.h  FrameworkResources.cpp  FrameworkResources.h  LawnApp.cpp  LawnApp.h  LawnProject.rc  Resources.cpp  main.cpp
src/ImageLib/: CMakeLists.txt
src/Lawn/: Board.cpp  Board.h  BoardInclude.h  CMakeLists.txt  Challenge.cpp  Challenge.h  Coin.cpp  Coin.h  CursorObject.cpp  CutScene.cpp  Cutscene.h  GameObject.h  GridItem.cpp  GridItem.h  LawnCommon.cpp  LawnCommon.h  LawnMower.cpp  LawnMower.h  MessageWidget.cpp  MessageWidget.h  Plant.cpp  Plant.h  Projectile.cpp  Projectile.h  ResourceInclude.h  SeedPacket.cpp  SeedPacket.h  ToolTipWidget.cpp  ZenGarden.cpp  ZenGarden.h  Zombie.cpp  Zombie.h
src/Lawn/Debug/: DebuggerWindow.cpp
src/Lawn/ResoddedFramework/: AdvancedOptionsDialog.cpp  AdvancedOptionsDialog.h  DebuggerWindow.cpp  DebuggerWindow.h  SettingsDialog.cpp  SettingsDialog.h  UpdateChecker.cpp
src/Lawn/System/: Achievements.cpp  DataSync.cpp  DataSync.h  LegacySaveGame.cpp  LegacySaveGame.h  Music.cpp  Music.h  PlayerInfo.cpp  PlayerInfo.h  PoolEffect.cpp  PopDRMComm.cpp  ProfileMgr.cpp  ProfileMgr.h  ReanimationLawn.cpp  ReanimationLawn.h  SaveGame.cpp  SaveGame.h  TypingCheck.cpp  TypingCheck.h
src/Lawn/Widget/: AchievementsWidget.cpp  AlmanacDialog.cpp  AlmanacDialog.h  AwardScreen.cpp  AwardScreen.h  ChallengeScreen.cpp  ChallengeScreen.h  CheatDialog.cpp  CheatDialog.h  ContinueDialog.cpp  ContinueDialog.h  CreditScreen.cpp  CreditScreen.h  GameButton.cpp  GameButton.h  GameSelector.cpp  GameSelector.h  ImitaterDialog.cpp  ImitaterDialog.h  LawnDialog.cpp  LawnDialog.h  NewOptionsDialog.cpp  NewOptionsDialog.h  NewUserDialog.cpp  NewUserDialog.h  SeedChooserScreen.cpp  SeedChooserScreen.h  StoreScreen.cpp  StoreScreen.h  TitleScreen.cpp  TitleScreen.h  UserDialog.cpp  ZombatarTOS.cpp  ZombatarWidget.cpp  ZombatarWidget.h
src/PakLib/: CMakeLists.txt  PakInterface.cpp  PakInterface.h
src/Sexy.TodLib/: Attachment.cpp  Attachment.h  CompiledDefinition.h  DataArray.h  Definition.cpp  Definition.h  EffectSystem.cpp  EffectSystem.h  FilterEffect.cpp  FilterEffect.h  OriginalCompiledDefinition.cpp  OriginalCompiledDefinition.h  ReanimAtlas.cpp  ReanimAtlas.h  Reanimator.cpp  Reanimator.h  TodCommon.cpp  TodCommon.h  TodDebug.cpp  TodDebug.h  TodFoley.cpp  TodFoley.h  TodList.cpp  TodList.h  TodParticle.cpp  TodParticle.h  TodStringFile.cpp  TodStringFile.h  Trail.cpp  Trail.h
src/SexyAppFramework/: BassMusicInterface.cpp  BassMusicInterface.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Common.cpp  Common.h  Debug.cpp  Dialog.cpp  EditWidget.cpp  Encoding.cpp  Encoding.h  Gamepad.cpp  Gamepad.h  Graphics.cpp  HTTPTransfer.cpp  ImageFont.cpp  ImageFont.h  KeyCodes.cpp  KeyCodes.h  ListWidget.cpp  MTRand.cpp  MTRand.h  ModVal.cpp  OpenALSoundInstance.cpp  OpenALSoundInstance.h  OpenALSoundManager.cpp  OpenALSoundManager.h  OpenGLImage.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  PerfTimer.cpp  Platform.h  PropertiesParser.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SEHCatcher.cpp  (+19 more)
src/SexyAppFramework/ImGui/: ImGuiManager.cpp  ImGuiManager.h
src/SexyAppFramework/OpenGL/: OpenGLImage.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h
src/SexyAppFramework/SDL3Renderer/: SDL3Image.cpp  SDL3Renderer.cpp  SDL3Renderer.h
(+1 files in other folders)
